# hydra-mlx-context

./: .env.example  .gitignore  LICENSE  README.md  SUBMISSION.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: demo-transcript.txt  host-and-failure-evidence.txt
contribution/: local-model-context.mdx
demo/: run.sh
docs/: ARCHITECTURE.md  COMPETITION.md  DECISIONS.md  DEMO.md  PRIVACY.md  VERIFICATION.md
src/hydra_mlx_context/: __init__.py  benchmark.py  cli.py  demo.py  hydra.py  local_model.py  models.py  pipeline.py  policy.py  prompting.py
submission/: DISCORD_POST.md  ORGANIZER_MESSAGE.md  PR_BODY.md  VIDEO_SCRIPT.md
tests/: test_benchmark.py  test_demo.py  test_hydra_adapter.py  test_local_model.py  test_pipeline.py  test_policy.py  test_prompting.py
