[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hydra-mlx-context"
version = "0.1.0"
description = "Consent-gated HydraDB context for local MLX and LM Studio models"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jai Bhagat" }]
dependencies = [
  "httpx>=0.27,<1",
  "hydradb-sdk>=2,<3",
  "python-dotenv>=1,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.5,<1"]

[project.scripts]
hydra-mlx = "hydra_mlx_context.cli:main"
hydra-mlx-demo = "hydra_mlx_context.demo:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hydra_mlx_context"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
